--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -172,17 +172,18 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-ObjectProperty=TopDownCharacter_C.Collision.Collision,
-FloatProperty=
+ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ArrayProperty=
 IntProperty=
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BaseWeapon_C=StructProperty.DefaultValueCategory.None,
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
+HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -213,8 +214,8 @@ LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/Chloe/UI/HUD_Proto.HUD_Proto
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2104,6 +2105,28 @@ HUD_Proto_C.Behavior=True
 HUD_Proto_C.Render Transform=True
 HUD_Proto_C.Clipping=True
 HUD_Proto_C.Navigation=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Clipping=True
+EditableTextBox.Navigation=True
+EditableTextBox.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+TextBlock.Localization=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2148,13 +2171,14 @@ HUD_Proto_C.Navigation=True
 /Game/GW000979/TopDownCharacterTest.TopDownCharacterTest=0
 /Game/T015548H/TopDownCharacterShane.TopDownCharacterShane=0
 /Game/GW000979/TestPawn3.TestPawn3=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
 SphereComponent=
 ShapeComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2167,8 +2191,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Character="\"Object.DashCooldown\" \"Object.DashCooldown\" "
+Pawn="\"Object.DashCooldown\" \"Object.DashCooldown\" "
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2182,7 +2206,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+TopDownCharacter_C="\"Object.DashCooldown\" \"Object.DashCooldown\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2205,6 +2229,12 @@ StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Response
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
+HUD_Proto_C=
+UserWidget=
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2939,7 +2969,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -3010,15 +3040,17 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chloe/UI/HUD_Proto
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/SpawnActor/SpawnPoint
-MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/AIAgent/AIbot
-MRUItem5=/Game/Levels/TerrainMap
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/Chloe/UI/HUD_Proto
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/SpawnActor/SpawnPoint
+MRUItem4=/Game/Levels/MechanicsLevel
+MRUItem5=/Game/AIAgent/AIbot
+MRUItem6=/Game/Levels/TerrainMap
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
 
 [WidgetTemplatesExpanded]
+Common=False
 Extra=False
 Input=False
 Lists=False
