--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,9 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/Levels/TerrainMap
-MRUItem2=/Game/Levels/BlockOut
-MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/TerrainMap
+MRUItem3=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,
@@ -169,20 +169,23 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-AIbot_C=AIbot_C.Collision.Collision,
+AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,
-FloatProperty=
+FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 ArrayProperty=
-IntProperty=
-K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BaseWeapon_C=StructProperty.DefaultValueCategory.None,
+IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
+TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -212,9 +215,7 @@ ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+CleanShutdown=True
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2104,6 +2105,36 @@ HUD_Proto_C.Behavior=True
 HUD_Proto_C.Render Transform=True
 HUD_Proto_C.Clipping=True
 HUD_Proto_C.Navigation=True
+TargetDummy_C.TransformCommon=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+REINST_AIbot_C_428.Variable=True
+REINST_AIbot_C_428.TransformCommon=True
+REINST_AIbot_C_428.Sockets=True
+REINST_AIbot_C_428.Animation=True
+REINST_AIbot_C_428.Mesh=True
+REINST_AIbot_C_428.Materials=True
+REINST_AIbot_C_428.Clothing=True
+REINST_AIbot_C_428.ClothingSimulation=True
+REINST_AIbot_C_428.Physics=True
+REINST_AIbot_C_428.Collision=True
+REINST_AIbot_C_428.Lighting=True
+REINST_AIbot_C_428.Rendering=True
+REINST_AIbot_C_428.Tags=True
+REINST_AIbot_C_428.ComponentReplication=True
+REINST_AIbot_C_428.Activation=True
+REINST_AIbot_C_428.Cooking=True
+REINST_AIbot_C_428.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2134,7 +2165,7 @@ HUD_Proto_C.Navigation=True
 /Game/AIAgent/Proto_controller.Proto_controller=0
 /Game/AIAgent/AIbot.AIbot=0
 /Game/AIAgent/NewAITree.NewAITree=0
-/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon=1
+/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon=0
 /Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable=0
 /Game/GW000979/DataStruct/Weapon_Struct.Weapon_Struct=1
 /Game/GW000979/DataStruct/DamageType.DamageType=1
@@ -2148,6 +2179,8 @@ HUD_Proto_C.Navigation=True
 /Game/GW000979/TopDownCharacterTest.TopDownCharacterTest=0
 /Game/T015548H/TopDownCharacterShane.TopDownCharacterShane=0
 /Game/GW000979/TestPawn3.TestPawn3=1
+/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop=1
+/Game/AIAgent/I_Damage.I_Damage=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2157,7 +2190,7 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent=
 ShapeComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -2166,9 +2199,9 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIbot_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+AIbot_C=
+Character=
+Pawn=
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_AIbot_C_376="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Perception_C=
@@ -2182,7 +2215,7 @@ NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" \"Object.Controller.Controller"
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-TopDownCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2205,6 +2238,9 @@ StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.Response
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+TargetDummy_C=
+SpawnPoint_C="\"Object.\" \"Object.\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2230,7 +2266,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2832,8 +2868,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
-DataTableEditor.TimeStamp=2018.05.14-10.37.16
-DataTableEditor.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2018.09.20-07.56.08
+DataTableEditor.LastCompileMethod=External
 MagicLeap.TimeStamp=2018.09.20-07.58.52
 MagicLeap.LastCompileMethod=Unknown
 MagicLeapController.TimeStamp=2018.09.20-07.58.52
@@ -2898,6 +2934,8 @@ MagicLeapCameraPreviewFactory.TimeStamp=2018.09.20-07.58.52
 MagicLeapCameraPreviewFactory.LastCompileMethod=Unknown
 MeshBuilder.TimeStamp=2018.09.20-07.56.14
 MeshBuilder.LastCompileMethod=Unknown
+Voice.TimeStamp=2018.09.20-07.56.21
+Voice.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2946,14 +2984,16 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
+RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
 RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
-RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop;
 RecentlyPlaced=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon;
-RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/AIAgent/TestPawn.TestPawn;
 RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
@@ -3010,13 +3050,21 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chloe/UI/HUD_Proto
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/SpawnActor/SpawnPoint
+MRUItem0=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem1=/Game/AIAgent/I_Damage
+MRUItem2=/Game/AIAgent/TargetInterface
 MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/AIAgent/AIbot
-MRUItem5=/Game/Levels/TerrainMap
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem4=/Game/SpawnActor/SpawnPoint
+MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem6=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem7=/Game/GW000979/DataStruct/TargetDummy/TestDrop
+MRUItem8=/Game/AIAgent/AIbot
+MRUItem9=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem10=/Game/GW000979/DataStruct/WeaponDataTable
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem12=/Game/Chloe/UI/HUD_Proto
+MRUItem13=/Game/Levels/TerrainMap
+MRUItem14=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
 
 [WidgetTemplatesExpanded]
 Extra=False
