Weapon drop updates

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,10 +103,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/MechanicsLevel
-MRUItem1=/Game/Levels/TerrainMap
-MRUItem2=/Game/Levels/BlockOut
-MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/Levels/TerrainMap
+MRUItem3=/Game/Levels/BlockOut
 
 [DetailCustomWidgetExpansion]
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,
@@ -172,17 +172,19 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=AIbot_C.Collision.Collision,
 K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-ObjectProperty=TopDownCharacter_C.Collision.Collision,
+ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 ArrayProperty=
-IntProperty=
+IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BaseWeapon_C=StructProperty.DefaultValueCategory.None,
+BaseWeapon_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
+NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+Weapon Set Up=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -206,15 +208,16 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+ContentBrowserTab1.SelectedPaths=/Game/Chloe/Weapon_Inventory
 
 [EditorStartup]
-LastLevel=/Game/Levels/MechanicsLevel
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+CleanShutdown=True
+OpenAssetsAtExit=/Game/GW000979/DataStruct/WeaponDataTable.WeaponDataTable
+OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseWeapon.BaseWeapon
+OpenAssetsAtExit=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2104,6 +2107,33 @@ HUD_Proto_C.Behavior=True
 HUD_Proto_C.Render Transform=True
 HUD_Proto_C.Clipping=True
 HUD_Proto_C.Navigation=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+Weapon_Widget_C.Default=True
+Weapon_Widget_C.Appearance=True
+Weapon_Widget_C.Designer=True
+Weapon_Widget_C.Input=True
+Weapon_Widget_C.Interaction=True
+Weapon_Widget_C.Performance=True
+Weapon_Widget_C.Layout=True
+Weapon_Widget_C.Behavior=True
+Weapon_Widget_C.Render Transform=True
+Weapon_Widget_C.Clipping=True
+Weapon_Widget_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2148,6 +2178,7 @@ HUD_Proto_C.Navigation=True
 /Game/GW000979/TopDownCharacterTest.TopDownCharacterTest=0
 /Game/T015548H/TopDownCharacterShane.TopDownCharacterShane=0
 /Game/GW000979/TestPawn3.TestPawn3=1
+/Game/Chloe/Weapon_Inventory/Weapon_Widget.Weapon_Widget=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2157,7 +2188,7 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent=
 ShapeComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
@@ -2201,10 +2232,13 @@ REINST_TestPawn2_C_298="\"Object.Character.CharacterMovement.Object.Character Mo
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" "
 BaseWeapon_C=
 TestPawn3_C=
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent=
+MeshComponent=
 TopDownCharacterTest_C=
 ShaneToyeSprintTest_C=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Weapon Set Up=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2230,7 +2264,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -2832,8 +2866,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.09.07-09.34.18
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2018.06.09-14.06.59
 NewLevelDialog.LastCompileMethod=Unknown
-DataTableEditor.TimeStamp=2018.05.14-10.37.16
-DataTableEditor.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2018.09.20-07.56.08
+DataTableEditor.LastCompileMethod=External
 MagicLeap.TimeStamp=2018.09.20-07.58.52
 MagicLeap.LastCompileMethod=Unknown
 MagicLeapController.TimeStamp=2018.09.20-07.58.52
@@ -2898,6 +2932,12 @@ MagicLeapCameraPreviewFactory.TimeStamp=2018.09.20-07.58.52
 MagicLeapCameraPreviewFactory.LastCompileMethod=Unknown
 MeshBuilder.TimeStamp=2018.09.20-07.56.14
 MeshBuilder.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.09.20-07.56.12
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2018.09.20-07.56.18
+SequencerWidgets.LastCompileMethod=Unknown
+Voice.TimeStamp=2018.09.20-07.56.21
+Voice.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3010,13 +3050,18 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chloe/UI/HUD_Proto
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/SpawnActor/SpawnPoint
-MRUItem3=/Game/Levels/MechanicsLevel
-MRUItem4=/Game/AIAgent/AIbot
-MRUItem5=/Game/Levels/TerrainMap
-MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem0=/Game/Chloe/Weapon_Inventory/Weapon_Widget
+MRUItem1=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem2=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem3=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem4=/Game/GW000979/DataStruct/WeaponDataTable
+MRUItem5=/Game/Chloe/UI/HUD_Proto
+MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem7=/Game/SpawnActor/SpawnPoint
+MRUItem8=/Game/Levels/MechanicsLevel
+MRUItem9=/Game/AIAgent/AIbot
+MRUItem10=/Game/Levels/TerrainMap
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
 
 [WidgetTemplatesExpanded]
 Extra=False
@@ -3037,5 +3082,9 @@ bIsInPortraitMode=False
 ProfileName=
 ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
+ChangeVariableType_Warning=False
 
 
