Spawn point proximity

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValu
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 Perception_C=K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 StructProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-BoolProperty=
+BoolProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ArrayProperty=
 IntProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
@@ -185,7 +185,7 @@ UserDefinedStruct=
 BoxComponent=BoxComponent.Collision.Collision,
 TargetDummy_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 NameProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+SpawnPoint_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 AttackPlayer_C=
 Door_C=
 NavigationSystemV1=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
@@ -223,14 +223,9 @@ LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
+OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
-OpenAssetsAtExit=/Game/AIAgent/ProtoTree.ProtoTree
-OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
-OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
-OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Switch.Switch
-OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Door.Door
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2172,6 +2167,7 @@ LuminRuntimeSettings.Advanced MPK Packaging=True
 MagicLeapSDKSettings.SDK Config=True
 MagicLeapEmulatorSettings.MagicLeapEmulator=True
 MagicLeapSettings.General=True
+WorldSettings.Broadphase=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -3026,6 +3022,7 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/TopDownBP/Interactexample/Switch.Switch;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
 RecentlyPlaced=/Game/TopDownBP/Interactexample/Door.Door;
@@ -3033,7 +3030,6 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
-RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
 RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
@@ -3095,26 +3091,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Interactexample/Door
-MRUItem1=/Game/TopDownBP/Interactexample/Switch
-MRUItem2=/Game/AIAgent/AttackPlayer
-MRUItem3=/Game/AIAgent/ProtoTree
-MRUItem4=/Game/AIAgent/Proto_controller
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem6=/Game/Levels/MechanicsLevel
-MRUItem7=/Game/AIAgent/AIbot
-MRUItem8=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem9=/Game/AIAgent/I_Damage
-MRUItem10=/Game/AIAgent/TargetInterface
-MRUItem11=/Game/SpawnActor/SpawnPoint
-MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem13=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem14=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem15=/Game/GW000979/DataStruct/Weapon_Struct
-MRUItem16=/Game/GW000979/DataStruct/WeaponDataTable
-MRUItem17=/Game/Chloe/UI/HUD_Proto
-MRUItem18=/Game/Levels/TerrainMap
-MRUItem19=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/SpawnActor/SpawnPoint
+MRUItem4=/Game/TopDownBP/Interactexample/Door
+MRUItem5=/Game/TopDownBP/Interactexample/Switch
+MRUItem6=/Game/AIAgent/AttackPlayer
+MRUItem7=/Game/AIAgent/ProtoTree
+MRUItem8=/Game/AIAgent/Proto_controller
+MRUItem9=/Game/AIAgent/AIbot
+MRUItem10=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem11=/Game/AIAgent/I_Damage
+MRUItem12=/Game/AIAgent/TargetInterface
+MRUItem13=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem14=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem15=/Game/GW000979/DataStruct/TargetDummy/TestDrop
+MRUItem16=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem17=/Game/GW000979/DataStruct/WeaponDataTable
+MRUItem18=/Game/Chloe/UI/HUD_Proto
+MRUItem19=/Game/Levels/TerrainMap
 
 [WidgetTemplatesExpanded]
 Extra=False
