--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -216,21 +216,14 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/SpawnActor
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/AIAgent/AIbot.AIbot
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
-OpenAssetsAtExit=/Game/AIAgent/ProtoTree.ProtoTree
-OpenAssetsAtExit=/Game/AIAgent/ProtoAI.ProtoAI
-OpenAssetsAtExit=/Game/AIAgent/AttackPlayer.AttackPlayer
-OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Switch.Switch
-OpenAssetsAtExit=/Game/TopDownBP/Interactexample/Door.Door
+OpenAssetsAtExit=/Game/SpawnActor/SpawnPoint.SpawnPoint
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -2172,6 +2165,8 @@ LuminRuntimeSettings.Advanced MPK Packaging=True
 MagicLeapSDKSettings.SDK Config=True
 MagicLeapEmulatorSettings.MagicLeapEmulator=True
 MagicLeapSettings.General=True
+GeomModifier_Extrude.Settings=True
+WorldSettings.Broadphase=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2281,6 +2276,9 @@ SpawnPoint_C=
 AttackPlayer_C=
 BTTask_BlueprintBase=
 BTTaskNode=
+GeomModifier_Extrude="\"Object.Settings\" "
+GeomModifier_Edit="\"Object.Settings\" "
+GeomModifier="\"Object.Settings\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -2306,7 +2304,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBX=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
 FBXAnim=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -3095,18 +3093,18 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Interactexample/Door
-MRUItem1=/Game/TopDownBP/Interactexample/Switch
-MRUItem2=/Game/AIAgent/AttackPlayer
-MRUItem3=/Game/AIAgent/ProtoTree
-MRUItem4=/Game/AIAgent/Proto_controller
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem6=/Game/Levels/MechanicsLevel
-MRUItem7=/Game/AIAgent/AIbot
-MRUItem8=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem9=/Game/AIAgent/I_Damage
-MRUItem10=/Game/AIAgent/TargetInterface
-MRUItem11=/Game/SpawnActor/SpawnPoint
+MRUItem0=/Game/SpawnActor/SpawnPoint
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/TopDownBP/Interactexample/Door
+MRUItem3=/Game/TopDownBP/Interactexample/Switch
+MRUItem4=/Game/AIAgent/AttackPlayer
+MRUItem5=/Game/AIAgent/ProtoTree
+MRUItem6=/Game/AIAgent/Proto_controller
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/AIAgent/AIbot
+MRUItem9=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem10=/Game/AIAgent/I_Damage
+MRUItem11=/Game/AIAgent/TargetInterface
 MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem13=/Game/GW000979/DataStruct/BaseWeapon
 MRUItem14=/Game/GW000979/DataStruct/TargetDummy/TestDrop
@@ -3135,5 +3133,11 @@ bIsInPortraitMode=False
 ProfileName=
 ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
+
+[FEditorModeTools]
+CoordSystem=1
+
+[SuppressableDialogs]
+ExtrudeCoordsWarning=False
 
 
