--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -193,6 +193,9 @@ LuminRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 MagicLeapSDKSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 MagicLeapEmulatorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
 MagicLeapSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Interact,
+TeleportOut_C=
+Teleport_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
+TextProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -216,7 +219,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SpawnActor
+ContentBrowserTab1.SelectedPaths=/Game/GW000979
 
 [EditorStartup]
 LastLevel=/Game/Levels/MechanicsLevel
@@ -2167,6 +2170,30 @@ MagicLeapEmulatorSettings.MagicLeapEmulator=True
 MagicLeapSettings.General=True
 GeomModifier_Extrude.Settings=True
 WorldSettings.Broadphase=True
+Teleport_C.Tick=True
+Teleport_C.Rendering=True
+Teleport_C.Replication=True
+Teleport_C.Input=True
+Teleport_C.Actor=True
+TeleportOut_C.TransformCommon=True
+TeleportOut_C.Rendering=True
+TeleportOut_C.Input=True
+TeleportOut_C.Actor=True
+Teleport_C.TransformCommon=True
+Teleport_C.Default=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+TextProperty.Variable=True
+TextProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=1
@@ -2213,6 +2240,7 @@ WorldSettings.Broadphase=True
 /Game/GW000979/TestPawn3.TestPawn3=1
 /Game/GW000979/DataStruct/TargetDummy/TestDrop.TestDrop=1
 /Game/AIAgent/I_Damage.I_Damage=0
+/Game/GW000979/BasicTeleporter/Teleport.Teleport=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -2221,7 +2249,7 @@ InstalledPlugins=Substance
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 SphereComponent=
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -3024,6 +3052,9 @@ LastLogListing=LoadErrors
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/GW000979/BasicTeleporter/Teleport.Teleport;
+RecentlyPlaced=/Game/GW000979/BasicTeleporter/TeleportOut.TeleportOut;
+RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Game/TopDownBP/Interactexample/Switch.Switch;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
 RecentlyPlaced=/Game/TopDownBP/Interactexample/Door.Door;
@@ -3031,7 +3062,6 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/AIAgent/AIbot.AIbot;
 RecentlyPlaced=/Game/GW000979/DataStruct/TargetDummy/TargetDummy.TargetDummy;
-RecentlyPlaced=/Game/SpawnActor/SpawnPoint.SpawnPoint;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/GW000979/ShaneToyeSprintTest.ShaneToyeSprintTest;
 RecentlyPlaced=/Game/GW000979/TopDownCharacterTest.TopDownCharacterTest;
@@ -3042,7 +3072,6 @@ RecentlyPlaced=/Game/AIAgent/TestPawn2.TestPawn2;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Geometry/Meshes/GrassMesh.GrassMesh;
 RecentlyPlaced=/Game/Geometry/Meshes/Grass.Grass;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -3093,26 +3122,26 @@ PaletteThumbnailScale=0.300000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SpawnActor/SpawnPoint
-MRUItem1=/Game/Levels/MechanicsLevel
-MRUItem2=/Game/TopDownBP/Interactexample/Door
-MRUItem3=/Game/TopDownBP/Interactexample/Switch
-MRUItem4=/Game/AIAgent/AttackPlayer
-MRUItem5=/Game/AIAgent/ProtoTree
-MRUItem6=/Game/AIAgent/Proto_controller
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem8=/Game/AIAgent/AIbot
-MRUItem9=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
-MRUItem10=/Game/AIAgent/I_Damage
-MRUItem11=/Game/AIAgent/TargetInterface
-MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem13=/Game/GW000979/DataStruct/BaseWeapon
-MRUItem14=/Game/GW000979/DataStruct/TargetDummy/TestDrop
-MRUItem15=/Game/GW000979/DataStruct/Weapon_Struct
-MRUItem16=/Game/GW000979/DataStruct/WeaponDataTable
-MRUItem17=/Game/Chloe/UI/HUD_Proto
-MRUItem18=/Game/Levels/TerrainMap
-MRUItem19=/Game/TopDownBP/Blueprints/TopDownCharacterCleaned
+MRUItem0=/Game/GW000979/BasicTeleporter/Teleport
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem2=/Game/Levels/MechanicsLevel
+MRUItem3=/Game/SpawnActor/SpawnPoint
+MRUItem4=/Game/TopDownBP/Interactexample/Door
+MRUItem5=/Game/TopDownBP/Interactexample/Switch
+MRUItem6=/Game/AIAgent/AttackPlayer
+MRUItem7=/Game/AIAgent/ProtoTree
+MRUItem8=/Game/AIAgent/Proto_controller
+MRUItem9=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem10=/Game/AIAgent/AIbot
+MRUItem11=/Game/GW000979/DataStruct/TargetDummy/TargetDummy
+MRUItem12=/Game/AIAgent/I_Damage
+MRUItem13=/Game/AIAgent/TargetInterface
+MRUItem14=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem15=/Game/GW000979/DataStruct/BaseWeapon
+MRUItem16=/Game/GW000979/DataStruct/TargetDummy/TestDrop
+MRUItem17=/Game/GW000979/DataStruct/Weapon_Struct
+MRUItem18=/Game/GW000979/DataStruct/WeaponDataTable
+MRUItem19=/Game/Chloe/UI/HUD_Proto
 
 [WidgetTemplatesExpanded]
 Extra=False
